Update custom stack blog (#97)